<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">tasp</string>
    <string name="action_settings">settings</string>
    <string-array name="drugs">
        <item>Drug1</item>
        <item>Drug2</item>
        <item>Drug3</item>
    </string-array>
    <string-array name="catlist">
        <item>Барсик</item>
        <item>Мурзик</item>
        <item>Васька</item>
        <item>Рыжик</item>
    </string-array>
    <string name="accept">Принять</string>
    <string name="edizmerprep">Единицы измерения препарата</string>
    <string name="nasprimer">Настройки приёма препарата</string>
    <string name="datapriem">Даты приёма препарата</string>
    <string name="tochvrprep">Укажите точное время применения препарата (если не нужно выбирать интервал)</string>
    <string name="vrskotor">Укажите время с которого нужно начать и закончить принятие препарата</string>
    <string name="intprim">Укажите интервал применения препарата в день</string>
    <string name="neoprsr">Неопределённый срок</string>
    <string name="viberpodvar">Выберите подходящий вариант:</string>
    <string name="ykolikus">Укол</string>
    <string name="tabletikus">Таблетка</string>
    <string name="kaplikus">Капли</string>
    <string name="mazikus">Мазь</string>
    <string name="vvodsvoivariantikus">Введите свой вариант</string>
    <string name="sposobpriminetikus">Способ применения:</string>
    <string name="vveditename">Введите название препарата</string>
    <string name="dalee">Далее</string>
    <string name="vvodlovetext">Введите ваши особенности применения препарата (те которые были реомендованы врачом, например:"2/3 чайной ложки на 100 грамм воды")</string>
    <string name="poyasnenie">Сколько раз в день приёма нужно принимать в препарат</string>
    <string name="o">1</string>
    <string name="dv">2</string>
    <string name="tr">3</string>
    <string name="forch">4</string>
    <string name="any"></string>
    <string name="svoy">Введите свой вариант (в цифрах)</string>
    <string name="inter">Выберите в каком интервале вы будете принимать препарат (в днях)</string>
    <string name="zdesi">Здесь нужно выбрать сколько по продолжительности вы будете принимать препарат</string>
    <string name="perm">Неограниченный срок</string>
    <string name="nperm">Ограниченный срок</string>
    <string name="choosethetime">Выбрать время</string>
    <string name="ura">Завершить создание курса</string>

</resources>
