<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="40dp"
        android:text="@string/inter" />

    <CheckBox
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_below="@+id/textView"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/o"
        />

    <CheckBox
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/dv"
       />

    <CheckBox
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/tr"
        />

    <CheckBox
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/forch"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/svoy"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        />

    <Button
        android:id="@+id/dalee4"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="120dp"
        android:layout_height="75dp"
        android:backgroundTint="@android:color/holo_red_dark"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="20dp"
        android:text="@string/dalee" />


</LinearLayout>
