<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/textView2"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:text="@string/poyasnenie"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="90dp"
        />

    <CheckBox
        android:id="@+id/checkBox7"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_below="@+id/textView2"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/o"
 />

    <CheckBox
        android:id="@+id/checkBox8"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/dv"
        android:layout_below="@+id/checkBox7"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        />

    <CheckBox
        android:id="@+id/checkBox9"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/tr"
        android:layout_below="@+id/checkBox8"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        />

    <CheckBox
        android:id="@+id/checkBox10"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/forch"
        android:layout_below="@+id/checkBox9"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/checkedTextView"
        android:layout_width="match_parent"
        android:contextClickable="true"
        android:layout_height="50dp"
        android:hint="@string/svoy"
        android:layout_below="@+id/checkBox10"
        android:layout_marginTop="20dp"
        />


    <Button

        android:id="@+id/dalee3"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="120dp"
        android:layout_height="75dp"
        android:backgroundTint="@android:color/holo_red_dark"
        android:layout_marginLeft="140dp"
        android:textSize="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/dalee" />

</LinearLayout>
