<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:textSize="18dp"
        android:text="@string/zdesi" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="70dp">

        <Button
            android:id="@+id/button4"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:layout_marginTop="17dp"
            android:backgroundTint="@android:color/holo_red_dark"
            android:text="@string/perm"
            android:textSize="16dp" />

        <Button
            android:id="@+id/button5"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:layout_marginTop="17dp"
            android:backgroundTint="@android:color/holo_red_dark"
            android:text="@string/choosethetime"
            android:textSize="16dp" />




    </LinearLayout>


</LinearLayout>
