<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/SDtext1"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:clickable="false"
        android:layout_marginTop="10dp"
        android:text="@string/intprim"
        />
    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:entries="@array/catlist"
        />
    <TextView
        android:id="@+id/SDtext2"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:clickable="false"
        android:layout_marginTop="30dp"
        android:text="@string/vrskotor"
        />
    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:entries="@array/catlist"
        />
    <TextView
        android:id="@+id/SDtext3"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:clickable="false"
        android:layout_marginTop="30dp"
        android:text="@string/tochvrprep"
        />
    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:entries="@array/catlist"
        android:layout_height="wrap_content"
        />


    <Button
        android:id="@+id/buttonOK"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:background="@android:color/holo_red_dark"
        android:layout_below="@id/spinner3"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="130dp"
        android:layout_gravity="center_vertical"
        android:text="@string/accept"
        />

</LinearLayout>