<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <include layout="@layout/toolbar"
        android:id="@+id/include2" />

    <EditText
        android:id="@+id/changename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/include2"
        android:ems="18"
        android:inputType="textPersonName"
        android:hint="Впишите название " />

    <Button
        android:id="@+id/button3"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_below="@+id/changename"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:background="@android:color/holo_red_dark"
        android:text="@string/edizmerprep" />

    <Button
        android:id="@+id/button6"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:background="@android:color/holo_red_dark"
        android:text="@string/nasprimer" />

    <Button
        android:id="@+id/button7"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_alignStart="@+id/button6"
        android:layout_below="@+id/button6"
        android:layout_marginTop="60dp"
        android:background="@android:color/holo_red_dark"
        android:text="@string/datapriem" />


</RelativeLayout>

